<resources>
    <string name="app_name">KnoBee</string>
    <string name="notification_button">Notification Button</string>
    <string name="how_are_you_feeling_today">How are you feeling today?</string>
    <string name="december_4_2019">December 4, 2019</string>
    <string name="amazing_picture_with_water_try_once_when_you_come_to_gujarat_state_of_india">Amazing picture with water try once when you come to Gujarat State of India</string>
    <string name="dilay_tenzin">Dilay Tenzin</string>
    <string name="_2_more_images">+2 more images</string>
</resources>