<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_post"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/size_10dp"
    android:elevation="2dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/size_10dp">
        <RelativeLayout
            android:id="@+id/user_detail_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="@dimen/size_10dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/user_image_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="@dimen/size_10dp"
                android:elevation="2dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="42dp"
                        android:layout_height="40dp"
                        android:src="@drawable/post_demo_ic2"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/app_name"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_10dp"
                android:layout_marginTop="@dimen/size_10dp"
                android:layout_toEndOf="@id/user_image_card"
                android:fontFamily="casual"
                android:text="@string/dilay_tenzin"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />
            <TextView
                android:id="@+id/post_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_name"
                android:text="@string/december_4_2019"
                android:textSize="12sp"
                android:layout_toEndOf="@id/user_image_card"
                android:layout_marginStart="@dimen/size_10dp"
                android:fontFamily="casual"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_round_more_vert_24"
                android:background="@android:color/transparent"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/app_name"
                android:layout_marginEnd="@dimen/size_10dp"/>

        </RelativeLayout>
        <TextView
            android:id="@+id/sample_post_Txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/size_10dp"
            android:layout_marginStart="@dimen/size_10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_detail_layout"
            android:text="@string/amazing_picture_with_water_try_once_when_you_come_to_gujarat_state_of_india"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sample_post_Txt">
            <ImageView
                android:id="@+id/image1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/post_demo_ic1"
                android:scaleType="fitXY"
                android:maxHeight="100dp"
                app:layout_constraintBottom_toTopOf="@id/image3"
                android:layout_marginStart="@dimen/size_10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/image2"
                android:layout_marginEnd="@dimen/size_10dp"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/app_name"/>
            <ImageView
                android:id="@+id/image2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/post_demo_ic1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/image1"
                app:layout_constraintTop_toTopOf="@id/image1"
                android:scaleType="fitXY"
                android:maxHeight="100dp"
                android:layout_marginStart="@dimen/size_10dp"
                app:layout_constraintBottom_toBottomOf="@id/image1"
                android:layout_marginEnd="@dimen/size_10dp"
                android:contentDescription="@string/app_name"/>
            <ImageView
                android:id="@+id/image3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/post_demo_ic1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/image4"
                app:layout_constraintTop_toBottomOf="@id/image1"
                app:layout_constraintBottom_toBottomOf="parent"
                android:scaleType="fitXY"
                android:maxHeight="100dp"
                android:layout_marginStart="@dimen/size_10dp"
                android:layout_marginEnd="@dimen/size_10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/app_name"/>
            <ImageView
                android:id="@+id/image4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/post_demo_ic1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/image3"
                app:layout_constraintTop_toTopOf="@id/image3"
                app:layout_constraintBottom_toBottomOf="@id/image3"
                android:scaleType="fitXY"
                android:layout_marginStart="@dimen/size_10dp"
                android:maxHeight="100dp"
                android:layout_marginEnd="@dimen/size_10dp"
                android:contentDescription="@string/app_name"/>
            <TextView
                android:id="@+id/more_image_text"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/post_demo_ic1"
                android:textAlignment="center"
                android:gravity="center"
                android:background="#AD000000"
                android:text="@string/_2_more_images"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@id/image4"
                app:layout_constraintEnd_toEndOf="@id/image4"
                app:layout_constraintTop_toTopOf="@id/image4"
                app:layout_constraintBottom_toBottomOf="@id/image4"
                android:scaleType="fitXY"
                android:contentDescription="@string/app_name"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>