<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <RelativeLayout
        android:id="@+id/tool_icon_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/size_20dp">
        <ImageButton
            android:id="@+id/notification_btn"
            android:layout_width="@dimen/size_23dp"
            android:layout_height="@dimen/size_23dp"
            android:background="@android:color/transparent"
            android:layout_alignParentEnd="true"
            android:scaleType="fitCenter"
            android:layout_marginEnd="@dimen/size_20dp"
            android:src="@drawable/ic_notification"
            android:contentDescription="@string/notification_button" />
        <ImageButton
            android:id="@+id/search_btn"
            android:layout_width="@dimen/size_23dp"
            android:layout_height="@dimen/size_23dp"
            android:scaleType="fitXY"
            android:background="@android:color/transparent"
            android:layout_toStartOf="@id/notification_btn"
            android:layout_marginEnd="@dimen/size_20dp"
            android:src="@drawable/ic_search"
            android:contentDescription="@string/notification_button" />
        <ImageButton
            android:id="@+id/person_btn"
            android:layout_width="@dimen/size_23dp"
            android:layout_height="@dimen/size_23dp"
            android:scaleType="fitXY"
            android:background="@android:color/transparent"
            android:layout_toStartOf="@id/search_btn"
            android:layout_marginEnd="@dimen/size_20dp"
            android:src="@drawable/ic_person"
            android:contentDescription="@string/notification_button" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/create_post_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/size_10dp"
        android:paddingTop="@dimen/size_10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/size_10dp"
        app:layout_constraintTop_toBottomOf="@id/tool_icon_layout">
        <androidx.cardview.widget.CardView
            android:id="@+id/user_image_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            android:layout_marginStart="@dimen/size_20dp"
            android:elevation="2dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="42dp"
                    android:layout_height="40dp"
                    android:src="@drawable/post_demo_ic1"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/app_name"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fontFamily="@font/average"
            android:layout_toStartOf="@id/smiley_btn"
            android:layout_marginEnd="@dimen/size_10dp"
            android:textColorHint="#9fb5c6"
            android:layout_marginStart="@dimen/size_10dp"
            android:layout_toEndOf="@id/user_image_card"
            android:hint="@string/how_are_you_feeling_today"
            android:inputType="text"
            android:importantForAutofill="no" />

        <ImageButton
            android:id="@+id/smiley_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_smile"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/app_name"
            android:layout_marginEnd="@dimen/size_20dp"
            android:background="@android:color/transparent"/>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/posts_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_post"
        app:layout_constraintTop_toBottomOf="@id/create_post_layout"/>



</androidx.constraintlayout.widget.ConstraintLayout>